test/type-checking/bad/FunMultipleDecl.cc
int foo() {
  return 0;
}

string foo() {
  return "foo";
}
